--- a/copywriting/templates/copywriting/copywritingArticle.html
+++ b/copywriting/templates/copywriting/copywritingArticle.html
@@ -37,6 +37,10 @@ More Articles from {{ article.author.get_full_name }}
 {% endfor %}
 </ul>
 
+<p>
+	<a href="/blog/author/{{ article.author.user.username }}">All articles by {{ article.author.get_full_name }}</a>
+</p>
+
 Article published under following Tags
 <ul>
 {% for tag in article.get_tags %}
