--- a/copywriting/templates/copywriting/copywritingArticle.html
+++ b/copywriting/templates/copywriting/copywritingArticle.html
@@ -6,7 +6,7 @@
 
 {% ifequal article.status 0 %}
 <p style="color: #fff; background-color: #ff0000">
-    Article is not visible jet!
+    Article is not visible yet!
 </p>
 
 
