--- a/copywriting/templates/copywriting/copywritingArticle.html
+++ b/copywriting/templates/copywriting/copywritingArticle.html
@@ -48,12 +48,16 @@ Article published under following Tags
 {% endfor %}
 </ul>
 
-{% if article|previous %}
-<p><a href="{{ article|previous }}">Previous</a></p>
+{% next article as next %}
+{% if next %}
+<p>Next Article:<a href="{{ next.get_absolute_url}} "> {{next.title}} </a></p>
+
 {% endif %}
 
-{% if article|next  %}
-<p><a href="{{ article|next }}">Next</a></p>
+{% prev article as prev %}
+{% if prev %}
+<p>Previous Article:<a href="{{ prev.get_absolute_url}} "> {{prev.title}} </a></p>
+
 {% endif %}
 
 {% endblock %}
