--- a/copywriting/templates/copywriting/copywritingArticle.html
+++ b/copywriting/templates/copywriting/copywritingArticle.html
@@ -77,3 +77,24 @@ Newest articles:
 <!-- End: newest articles -->
 
 {% endblock %}
+
+<!-- Start: Comments with disqus.com -->
+
+{% if article.comments_enabled %}       
+    <div id="disqus_thread"></div>
+    <script type="text/javascript">
+
+        /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+        var disqus_shortname = 'test'; // required: replace example with your forum shortname
+        var disqus_identifier = '{{ article.slug }}';
+        
+        /* * * DON'T EDIT BELOW THIS LINE * * */
+        (function() {
+            var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+            dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+            (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+        })();
+        </script>
+{% endif %}
+
+<!-- End: Comments -->
