--- a/copywriting/templates/copywriting/copywritingArticle.html
+++ b/copywriting/templates/copywriting/copywritingArticle.html
@@ -83,11 +83,11 @@ Newest articles:
 {% if article.comments_enabled %}  
 
     <div id="disqus_thread"></div>
-    
+
     <script type="text/javascript">
 
         /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-        var disqus_shortname = 'example'; // required: replace example with your forum shortname
+        var disqus_shortname = '{{disqus_shortname}}';
         var disqus_identifier = '{{ article.slug }}';
 
         /* * * DON'T EDIT BELOW THIS LINE * * */
